--- a/PWASAMPLEBLAZOR/Pages/Counter.razor
+++ b/PWASAMPLEBLAZOR/Pages/Counter.razor
@@ -1,9 +1,8 @@
-﻿@page "/counter"
-
+﻿@page "/counter";
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
-
+<RazorClassLibraryDependency.Component1></RazorClassLibraryDependency.Component1>
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
