--- a/deps/RazorClassLibraryDependency/Component1.razor
+++ b/deps/RazorClassLibraryDependency/Component1.razor
@@ -1,4 +1,6 @@
 ﻿<div class="my-component">
     This component is defined in the <strong>RazorClassLibraryDependency</strong> library.
     Updated component.
+    <br>
+    Update2
 </div>
